[workspace]
resolver = "2"
members = ["coreutils", "oxide"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <email>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/oxide-linux/oxide-core"

[workspace.dependencies]
libc = "0.2"
clap = { version = "4.5", features = ["derive"] }
